--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+###> docker ###
+USER_ID=
+GROUP_ID=
+
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=laravel
+MYSQL_USER=
+MYSQL_PASSWORD=
+###< docker ###
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -8,11 +18,13 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+###> if run it inside the docker ###
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE="${MYSQL_DATABASE}"
+DB_USERNAME="${MYSQL_USER}"
+DB_PASSWORD="${MYSQL_PASSWORD}"
+###< if run it inside the docker ###
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
