--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
         - USER_ID
         - GROUP_ID
     container_name: app
+    environment:
+      DB_HOST: mysql
     volumes:
       - ./:/var/www
     depends_on:
@@ -36,6 +38,8 @@ services:
         - USER_ID
         - GROUP_ID
     container_name: php-cli
+    environment:
+      DB_HOST: mysql
     volumes:
       - ./:/var/www
     depends_on:
