--- a/.env.example
+++ b/.env.example
@@ -12,15 +12,15 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost:8080
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-###> if run it inside the docker ###
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
+###> if run it inside the docker ###
 DB_DATABASE="${MYSQL_DATABASE}"
 DB_USERNAME="${MYSQL_USER}"
 DB_PASSWORD="${MYSQL_PASSWORD}"
