--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.9.1",
         "axios": "^0.21",
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^4.0.0",
+        "popper.js": "^1.12",
+        "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1",
