--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMS_RU_API_ID=
+SMS_RU_API_URL=
