--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     volumes:
       - ./:/var/www
     depends_on:
@@ -42,6 +44,8 @@ services:
     environment:
       DB_HOST: mysql
       DB_PORT: 3306
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     volumes:
       - ./:/var/www
     depends_on:
