Changed the cache driver to redis

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ DB_PASSWORD="${MYSQL_PASSWORD}"
 ###< if run it inside the docker ###
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -36,7 +36,7 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=63791
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
