--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "diglactic/laravel-breadcrumbs": "^6.1",
+        "elasticsearch/elasticsearch": "^7.12",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
