--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,13 @@ services:
       DB_PORT: 3306
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      ELASTICSEARCH_HOSTS: elasticsearch:9200
     volumes:
       - ./:/var/www
     depends_on:
       - mysql
       - redis
+      - elasticsearch
 
   php-cli:
     build:
@@ -46,11 +48,13 @@ services:
       DB_PORT: 3306
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      ELASTICSEARCH_HOSTS: elasticsearch:9200
     volumes:
       - ./:/var/www
     depends_on:
       - mysql
       - redis
+      - elasticsearch
 
   mysql:
     image: mysql
@@ -78,3 +82,19 @@ services:
     volumes:
       - ./:/var/www
     working_dir: /var/www
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
+    container_name: es
+    environment:
+      bootstrap.memory_lock: "true"
+      ES_JAVA_OPTS: "-Xms512m -Xmx512m"
+      discovery.type: single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - ./storage/docker/elasticsearch:/usr/share/elasticsearch/data
+    ports:
+      - 9201:9200
