--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SMS_DRIVER=sms.ru
 SMS_SMS_RU_API_ID=
 SMS_SMS_RU_API_URL=
+
+ELASTICSEARCH_HOSTS=127.0.0.1:9201
