Added environment variables for networks auth

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,12 @@ SMS_SMS_RU_API_URL=
 ELASTICSEARCH_HOSTS=127.0.0.1:9201
 
 BANNER_COST_PER_MILE=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
