Small fix nginx config

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location /docs {
-        try_files $uri $uri/;
+        try_files $uri $uri/ /index.html;
     }
 
     location ~ \.php$ {
