--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "mews/purifier": "^3.3",
         "predis/predis": "^1.1"
     },
     "require-dev": {
