Installed WYSIWYG editor

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "postcss": "^8.1",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.8",
-        "sass-loader": "10.*"
+        "sass-loader": "10.*",
+        "summernote": "^0.8.18"
     }
 }
