--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ DB_PASSWORD="${MYSQL_PASSWORD}"
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
