--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ DB_PASSWORD="${MYSQL_PASSWORD}"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
